--- a/KustomPhotoshop/DirectXRenderer/DirectXRenderer.vcxproj
+++ b/KustomPhotoshop/DirectXRenderer/DirectXRenderer.vcxproj
@@ -145,14 +145,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="Camera2D.h" />
     <ClInclude Include="DirectXDependencies.h" />
     <ClInclude Include="DirectXGraphics.h" />
+    <ClInclude Include="PolyLine.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="Camera2D.cpp" />
     <ClCompile Include="DirectXGraphics.cpp" />
     <ClCompile Include="DirectXRenderer.cpp" />
@@ -170,6 +173,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PolyLine.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
