--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,16 @@
 *.userprefs
 
 # Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
 [Xx]64/
 [Xx]86/
 [Bb]uild/
 bld/
+[Bb]in/
+[Oo]bj/
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -140,6 +146,18 @@ publish/
 #*.pubxml
 *.publishproj
 
+# NuGet Packages
+*.nupkg
+# The packages folder can be ignored because of Package Restore
+**/packages/*
+# except build/, which is used as an MSBuild target.
+!**/packages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/packages/repositories.config
+# NuGet v3's project.json files produces more ignoreable files
+*.nuget.props
+*.nuget.targets
+
 # Microsoft Azure Build Output
 csx/
 *.build.csdef
@@ -147,6 +165,10 @@ csx/
 # Microsoft Azure Emulator
 ecf/
 rcf/
+
+# Windows Store app package directory
+AppPackages/
+BundleArtifacts/
 
 # Visual Studio cache files
 # files ending in .cache can be ignored
