--- a/KustomPhotoshop/DirectXRenderer/DirectXRenderer.vcxproj
+++ b/KustomPhotoshop/DirectXRenderer/DirectXRenderer.vcxproj
@@ -149,7 +149,9 @@
     <ClInclude Include="Camera2D.h" />
     <ClInclude Include="DirectXDependencies.h" />
     <ClInclude Include="DirectXGraphics.h" />
+    <ClInclude Include="Ellipse.h" />
     <ClInclude Include="PolyLine.h" />
+    <ClInclude Include="Quad.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Triangle.h" />
@@ -173,7 +175,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Ellipse.cpp" />
     <ClCompile Include="PolyLine.cpp" />
+    <ClCompile Include="Quad.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
